# conflux

./: .gitignore  .readthedoc.yaml  .readthedocs.yaml  Automation_Data_Example.txt  BetaConversionExample.py  BetaEngine.py  ConversionEngine.py  FPYEngine.py  README.md  SumEngine.py  automation.py  betaSpectrumCalc.py  example.py  setup.cfg  setup.py
aux/: CovMatDownloader.py
betaDB/: ENSDFparser.py  Z_to_element.csv  betaDB.xml  betaDBXmlGen.py
conflux/: Basic.py  BetaEngine.py  BetaPlusEngine.py  CEVNSXSection.py  ConversionEngine.py  FPYEngine.py  IBDXSection.py  NeutrinoEngine.py  SumEngine.py  __init__.py  config.py
conversionDB/: Pu_239_e_2014.csv  Pu_241_e_2014.csv  U235_beta_spectrum.csv  U_235_e_2014.csv
data/: CovMatDownloader.py  default_spectrum_calculator.py
docs/: CustCov.rst  Makefile  conflux.bsg.rst  conflux.rst  index.rst  make.bat  modules.rst  requirements.txt  setup.rst
examples/: Adjustable_Q.py  Auto_Script.py  BetaChangingParams.py  BetaEngine_Example.py  BetaExample.py  BetaPlusSummation.py  BetaPlusSummation_2.py  BetaPlus_EC_example.py  Beta_nu_comp.py  ConversionEngineSliceExample.py  ConversionEngine_Example.py  ConversionExample.py  ConversionMCSamplingExample.py  FissionIstp_Example.py  FissionModel_Example.py  FissionYieldExmp.py  HybridModelExample.py  HybridReactor.py  NewSeqExample.py  NovelReactorType.py  Pu239Added.py  ReactorNoneqExample.py  SelectedNeutrinoSpec.py  SumEngine Example.py  SumEngineExample.py  SummationExample.py  SummationIndieExample.py  Summation_DB_changing.py  T3spectrum.py  TimeEvolvingReactor.py  U235_synth_data_50keV.csv  breeding239.py  calc_burst_neutrino.py  example.py  fission_burst.py  noneq_calc_w_bursts.py  pu239_kT_explosion.py  pu241_numass.py  synth_data.py  testJson.json  (+1 more)
exec/: example.json  quickflux.py
fissionDB/: nfy-091_Pa_231.xml  nfy-092_U_232.xml  nfy-092_U_233.xml  nfy-094_Pu_241.xml  nfy-095_Am_241.xml  nfy-095_Am_243.xml  (+4 more)
miniBSG/: BSGWrapper.cc  CMakeLists.txt  Screening.h  SpectralFunctions.cc  test_libBSG.py
(+144 files in other folders)
