#FIXME: edit the setup to fit the package

[metadata]
name = conflux
version = 0.0.4
author = Xianyi Zhang
author_email = zhang39@llnl.gov
description = A package to calculate neutrino flux from beta decaying sources
long_description = file: README.md
long_description_content_type = text/markdown
url = https://lc.llnl.gov/bitbucket/projects/CFX/repos/conflux/browse
project_urls =
    Bug Tracker = https://lc.llnl.gov/bitbucket/projects/CFX/repos/conflux/browse
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = conflux
python_requires = >= 3.6

[options.packages.find]
where = conflux
