#FIXME: edit the setup to fit the package

[metadata]
name = conflux
version = 1.1.2
author = Xianyi Zhang
author_email = zhang39@llnl.gov
description = A package to calculate neutrino flux from beta decaying sources
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CNFLUX/conflux
project_urls =
    Bug Tracker = https://github.com/CNFLUX/conflux
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = conflux
python_requires = >= 3.6

[options.packages.find]
where = conflux
